Fix task list checkbox alignment

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2688,6 +2688,38 @@ $color-glass-border: rgba(255, 255, 255, 0.12);
     margin-bottom: 0.5rem;
   }
 
+  ul:has(> li.task-list-item) {
+    padding-left: 0.2rem;
+  }
+
+  li.task-list-item {
+    display: grid;
+    grid-template-columns: 1.15rem minmax(0, 1fr);
+    column-gap: 0.55rem;
+    align-items: start;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
+
+  li.task-list-item::marker {
+    content: "";
+  }
+
+  li.task-list-item .task-list-item-checkbox,
+  li.task-list-item > input[type="checkbox"] {
+    grid-column: 1;
+    width: 1rem;
+    height: 1rem;
+    margin: 0.38em 0 0;
+    accent-color: $color-primary;
+  }
+
+  li.task-list-item .task-list-item-checkbox + *,
+  li.task-list-item > input[type="checkbox"] + * {
+    grid-column: 2;
+  }
+
   pre {
     background: #1a1a2e;
     color: #e0e0e0;
